# holonic-futarchy

./: Anchor.toml  README.md
programs/autocrat_v0/: Cargo.toml
programs/holonic-futarchy/: Cargo.toml
programs/holonic-futarchy/src/: constants.rs  errors.rs  lib.rs
programs/holonic-futarchy/src/instructions/: create_futarchy_holon.rs  create_holon.rs  create_multisig.rs  holarchy_root.rs  mod.rs
programs/holonic-futarchy/src/state/: state.rs
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
tests/: holonic-futarchy.ts
