[package]
name = "holonic-futarchy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holonic_futarchy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.1"
solana-security-txt = "1.1.1"
autocrat_v0 = { git = "https://github.com/metaDAOproject/futarchy.git", package = "autocrat_v0", branch = "main"}
coral-multisig = { path = "../multisig", features = ["cpi"]}
